--- a/templates/html5/template/index.html
+++ b/templates/html5/template/index.html
@@ -12,9 +12,8 @@
 	
 	::if (LIB_OPENFL)::
 
-	<div id="haxe:openfl" style="background-color: #::WIN_FLASHBACKGROUND::; width: ::if (WIN_WIDTH == 0)::100%::else::::WIN_WIDTH::px::end::; height: ::if (WIN_HEIGHT == 0)::100%::else::::WIN_HEIGHT::px::end::" data-framerate="::WIN_FPS::">
-        <svg id="haxe-openfl-svg" version="1.1" xmlns="http://www.w3.org/2000/svg"></svg>
-    </div>
+    <div id="haxe:openfl" style="background-color: #::WIN_FLASHBACKGROUND::; width: ::if (WIN_WIDTH == 0)::100%::else::::WIN_WIDTH::px::end::; height: ::if (WIN_HEIGHT == 0)::100%::else::::WIN_HEIGHT::px::end::" data-framerate="::WIN_FPS::">
+        <svg id="haxe-openfl-svg" version="1.1" xmlns="http://www.w3.org/2000/svg" style="width:100%;height:100%"></svg>    </div>
 	<script>function winParameters () { return ::WIN_PARAMETERS::; }</script>
 	<script id="haxe:openfl:script" type="text/javascript" src="./::APP_FILE::.js"></script>
 	
