--- a/templates/html5/template/index.html
+++ b/templates/html5/template/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="width:100%; height:100%; margin:0; padding:0;">
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="chrome=1, IE=edge">
 	<title>::APP_TITLE::</title>
 	<script type="text/javascript" src="snap.svg-min.js"></script>
 </head>
-<body style="padding: 0; margin: 0; background-color: #FFFFFF;">
+<body style="width:100%; height:100%; padding: 0; margin: 0; background-color: #FFFFFF;">
 	
 	<!-- <div id="haxe:trace" style="position: absolute; z-index: 2147483647;::if !debug:: display: none;::end::"></div> -->
 	
 	::if (LIB_OPENFL)::
-
     <div id="haxe:openfl" style="background-color: #::WIN_FLASHBACKGROUND::; width: ::if (WIN_WIDTH == 0)::100%::else::::WIN_WIDTH::px::end::; height: ::if (WIN_HEIGHT == 0)::100%::else::::WIN_HEIGHT::px::end::" data-framerate="::WIN_FPS::">
-        <svg id="haxe-openfl-svg" version="1.1" xmlns="http://www.w3.org/2000/svg" style="width:100%;height:100%"></svg>    </div>
+        <svg id="haxe-openfl-svg" version="1.1" xmlns="http://www.w3.org/2000/svg" style="width:100%; height:100%"></svg>
+    </div>
 	<script>function winParameters () { return ::WIN_PARAMETERS::; }</script>
 	<script id="haxe:openfl:script" type="text/javascript" src="./::APP_FILE::.js"></script>
 	
