Fix ngrebenshikov/openfl-snapsvg#39 "TextField: clipboard"

--- a/templates/html5/template/index.html
+++ b/templates/html5/template/index.html
@@ -22,6 +22,8 @@
 	<script type="text/javascript" src="./::APP_FILE::.js"></script>
 	
 	::end::
+
+    <div type="text" id="openfl-snapsvg-input" contentEditable="true" style="position:absolute; top:-9999px; left:-9999px; width: 10px; height: 10px; overflow: hidden; " />
 	
 </body>
 </html>
