--- a/templates/html5/template/index.html
+++ b/templates/html5/template/index.html
@@ -22,17 +22,7 @@
     <style>
         html,body { margin: 0; padding: 0; height: 100%; overflow: hidden; }
         #openfl-content { background: #000000; width: 100%; height: 100%; }
-        ::foreach assets::::if (type == "font")::
-        @font-face {
-            font-family: '::id::';
-            src: url('::targetPath::.eot');
-            src: url('::targetPath::.eot?#iefix') format('embedded-opentype'),
-            url('::targetPath::.svg#my-font-family') format('svg'),
-            url('::targetPath::.woff') format('woff'),
-            url('::targetPath::.ttf') format('truetype');
-            font-weight: normal;
-            font-style: normal;
-        }::end::::end::
+
     </style>
 
 </head>
@@ -42,7 +32,31 @@
 	
 	::if (LIB_OPENFL)::
     <div id="haxe:openfl" style="background-color: #::WIN_FLASHBACKGROUND::; width: ::if (WIN_WIDTH == 0)::100%::else::::WIN_WIDTH::px::end::; height: ::if (WIN_HEIGHT == 0)::100%::else::::WIN_HEIGHT::px::end::" data-framerate="::WIN_FPS::">
-        <svg id="haxe-openfl-svg" version="1.1" xmlns="http://www.w3.org/2000/svg" style="width:100%; height:100%"></svg>
+        <svg id="haxe-openfl-svg"
+             version="1.1"
+             xmlns="http://www.w3.org/2000/svg"
+             style="width:100%; height:100%"
+             buffered-rendering="dynamic"
+             color-rendering="optimizeSpeed"
+             shape-rendering="optimizeSpeed"
+             text-rendering="optimizeSpeed"
+             image-rendering="optimizeSpeed">
+            <defs>
+            <style type="text/css">
+                <![CDATA[
+                ::foreach assets::::if (type == "font")::
+                    @font-face {
+                        font-family: '::id::';
+                        src: url('::targetPath::.eot');
+                        src: url('::targetPath::.eot?#iefix') format('embedded-opentype'),
+                        url('::targetPath::.woff') format('woff');
+                        font-weight: normal;
+                        font-style: normal;
+                    }::end::::end::
+                ]]>
+                </style>
+            </defs>
+         </svg>
     </div>
 	<script>function winParameters () { return ::WIN_PARAMETERS::; }</script>
 	<script id="haxe:openfl:script" type="text/javascript" src="./::APP_FILE::.js"></script>
